--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -265,9 +265,6 @@
             android:screenOrientation="landscape"
             android:taskAffinity="com.medlink.fastsignup" />
         <activity
-            android:name=".recyclerview.DoctorappoActivity"
-            android:screenOrientation="landscape" />
-        <activity
             android:name=".recyclerview.AddAppoActivity"
             android:screenOrientation="landscape" />
         <activity
@@ -479,9 +476,6 @@
             android:name=".activity.SelectXuetangTimeActivity"
             android:screenOrientation="landscape" />
         <activity
-            android:name=".recyclerview.HistoryActivity"
-            android:screenOrientation="landscape" />
-        <activity
             android:name=".recyclerview.CheckContractActivity"
             android:screenOrientation="landscape" />
         <activity
@@ -680,7 +674,8 @@
         <activity
             android:name=".measure.ecg.ECGCompatActivity"
             android:screenOrientation="landscape" />
-
+        <activity android:name=".recyclerview.DoctorappoActivity2"
+            android:screenOrientation="landscape"/>
     </application>
 
 </manifest>
