--- a/config.gradle
+++ b/config.gradle
@@ -25,7 +25,7 @@ ext {
     //TODO:开发时只更改开发引用即可，下方的生产引用不要轻易更改。
     //开发使用的IP地址
 
-    developUrl = api.xienProduceUrl
+    developUrl = api.xienTestUrl
 
     //线上正式运行的IP地址
     produceUrl = api.xienTestUrl
