fix ( Pay ) fix Pay, Only AliPay, Pay progress need to refactor and design again

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -676,6 +676,7 @@
             android:screenOrientation="landscape" />
         <activity android:name=".recyclerview.DoctorappoActivity2"
             android:screenOrientation="landscape"/>
+        <activity android:name=".recharge.QRCodeAliPayActivity" />
     </application>
 
 </manifest>
