--- a/settings.gradle
+++ b/settings.gradle
@@ -11,7 +11,7 @@ include ':app',
         ':lib-idcard-reader',
         ':lib-brightness',
 
-//        ':lib-call',
+        ':lib-call',
 //        ':app-bci-game',
         ':expand-textview-library',
         ':circleindicator',
@@ -22,7 +22,8 @@ include ':app',
         ':lib-video',
         ':lib-voice',
         ':lib-widget',
-        ':module-ecg', ':lib-idcard-cvr'
+        ':module-ecg',
+        ':lib-idcard-cvr'
 
 
 
