--- a/app/build.gradle
+++ b/app/build.gradle
@@ -238,4 +238,5 @@ dependencies {
     implementation project(':lib-widget')
     implementation project(':lib-voice')
     implementation project(':lib-idcard-cvr')
+    implementation project(':module-control-volume')
 }
