--- a/voice/src/main/AndroidManifest.xml
+++ b/voice/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         <!--android:label="讯飞语音示例" -->
     </application>
 
-    <uses-sdk android:minSdkVersion="8" />
+    <!--<uses-sdk android:minSdkVersion="14" />-->
 
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.INTERNET" />
