兼容怡可体重秤

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -681,6 +681,9 @@
         <activity
             android:name=".measure.BloodpressureMeasureActivity"
             android:screenOrientation="landscape" />
+        <activity
+            android:name=".measure.WeightMeasureActivity"
+            android:screenOrientation="landscape" />
     </application>
 
 </manifest>
